--- a/dist.toml
+++ b/dist.toml
@@ -10,7 +10,7 @@ build-command = ["make"]
 # Config for 'cargo dist'
 [dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version = "0.4.2"
+cargo-dist-version = "0.4.2-github-generic-build"
 # CI backends to support
 ci = ["github"]
 # The installers to generate for each app
@@ -32,7 +32,7 @@ create-release = false
 # Whether to publish prereleases to package managers
 publish-prereleases = true
 # Publish jobs to run in CI
-pr-run-mode = "plan"
+pr-run-mode = "upload"
 
 [workspace.metadata.dist.dependencies.homebrew]
 cmake = { targets = ["x86_64-apple-darwin"] }
